--- a/css/clean.css
+++ b/css/clean.css
@@ -1,6 +1,6 @@
 
 :root {
-    --blue-nds : #4FB3F6;
+    --blue-nds : rgb(79, 179, 246);
     --green-nds : #53CF92;
     --yellow-nds : #ffc400;
 }
